udpate remove-language
